Fix the spacing on lists

--- a/public/assets/styles/_base.scss
+++ b/public/assets/styles/_base.scss
@@ -54,10 +54,20 @@ blockquote {
 }
 
 ul {
+
     @include zero-margins();
     list-style-type: none;
     li {
+
         margin: .5*$unit;
+        line-height: 22px;
+
+        @media(min-width: 35em) {
+
+            font-size: 18px;
+            line-height: 24px;
+        }
+
     }
 }
 
@@ -106,4 +116,12 @@ h4,
 h5,
 h6 {
     @extend %c-heading-4;
+}
+
+code {
+
+    background: lighten($grey, 40%);
+    border: 1px solid lighten($grey, 30%);
+    border-radius: 3px;
+    padding: 2px 4px;
 }
